--- a/packages/docs/src/content/docs/guides/server-rendering.mdx
+++ b/packages/docs/src/content/docs/guides/server-rendering.mdx
@@ -1,56 +1,39 @@
 ---
 title: Server Rendering
-description: Render Rimitive apps on the server for faster first paint.
+description: Set up basic SSR with Rimitive adapters.
 ---
 
 import { Aside } from '@astrojs/starlight/components';
 
-Server-side rendering (SSR) renders your app to HTML on the server before sending it to the browser. Instead of shipping an empty `<div id="app">` and waiting for JavaScript to build the page, users see content immediately.
+This guide covers the practical setup for basic SSR. If you're new to SSR concepts, read [Intro to SSR](/guides/intro-to-ssr) first.
 
 ---
 
-## Why SSR?
+## Render Functions
 
-**Faster first paint.** Users see content before JavaScript loads. On slow connections or devices, this difference is significant.
+Rimitive provides three render functions for different SSR needs:
 
-**SEO.** Search engines index the HTML you send. Client-rendered apps require crawlers to execute JavaScript, which not all do well.
+| Function | Use Case |
+|----------|----------|
+| `renderToString` | Basic sync SSR — no async data loading |
+| `renderToStringAsync` | Waits for all `load()` boundaries before returning HTML |
+| `renderToStream` | Sends HTML immediately, streams data as it loads |
 
-**Social sharing.** Link previews (OpenGraph, Twitter cards) scrape your HTML. SSR ensures they get real content.
-
-**When to skip SSR:** Internal tools, dashboards, and apps behind auth often don't need SSR. The added complexity isn't worth it if SEO and initial load time aren't priorities.
-
----
-
-## What is Hydration?
-
-When the browser receives SSR HTML, it displays it immediately...but it's static. Buttons don't work, inputs don't respond. The page needs JavaScript to become interactive.
-
-**Hydration** is the process of making that SSR HTML interactive. Instead of throwing away the static HTML and rebuilding the DOM from scratch (which would cause a flash), hydration walks the existing DOM and attaches event listeners and reactive bindings.
-
-Think of it as "reanimating" the static HTML rather than replacing it.
+This guide covers `renderToString`. For async data loading, see [SSR with Data Loading](/guides/ssr-loading). For streaming, see [Streaming SSR](/guides/streaming-ssr).
 
 ---
 
-## Basic Setup
+## What You Need
 
 For basic SSR, you need:
 1. A **server adapter** that creates elements using linkedom instead of the real DOM
 2. A **client hydration adapter** that walks existing DOM instead of creating new elements
 
-### Server Adapter
+---
 
-```typescript
-import { createDOMServerAdapter } from '@rimitive/ssr/server';
+## Shared Service
 
-const { adapter, serialize } = createDOMServerAdapter();
-```
-
-- The server adapter creates elements using linkedom (a lightweight DOM implementation)
-- `serialize` converts elements to HTML strings
-
-### Shared Service
-
-Your service factory takes an adapter, so both server and client can use the same components:
+Start with creating the service a little differently than normal. This time, `createService()` will take an adapter, so both the server and client can use the same service for running:
 
 ```typescript
 // service.ts
@@ -61,6 +44,7 @@ import { createMatchModule } from '@rimitive/view/match';
 import type { Adapter } from '@rimitive/view/types';
 import type { DOMAdapterConfig } from '@rimitive/view/adapters/dom';
 
+//                            👇 New!
 export function createService(adapter: Adapter<DOMAdapterConfig>) {
   return compose(
     SignalModule,
@@ -74,23 +58,29 @@ export function createService(adapter: Adapter<DOMAdapterConfig>) {
 export type Service = ReturnType<typeof createService>;
 ```
 
-### Server
+Now, this file can be shared with both the server and the client ✨
+
+## Server Setup
+
+`createLinkedomAdapter()` creates a server-friendly adapter powered by [linkedom](https://github.com/WebReflection/linkedom), a lightweight DOM implementation for Node.js. When `el("div")` runs on the server, it creates a linkedom element instead of a real DOM element—same structure, no browser required.
+
+Create a fresh adapter and service for each incoming request. Reusing them across requests would cause data from one user to leak into another's response.
 
 ```typescript
 // server.ts
 import { createServer } from 'node:http';
-import { createDOMServerAdapter } from '@rimitive/ssr/server';
+import { createLinkedomAdapter, renderToString } from '@rimitive/ssr/server';
 import { createService } from './service.js';
 import { App } from './App.js';
 
 const server = createServer((req, res) => {
   // Create per-request adapter and service
-  const { adapter, serialize } = createDOMServerAdapter();
+  const { adapter, serialize } = createLinkedomAdapter();
   const service = createService(adapter);
 
   // Create and render the app
   const root = App(service).create(service);
-  const html = serialize(root);
+  const html = renderToString(root, serialize);
 
   res.writeHead(200, { 'Content-Type': 'text/html' });
   res.end(`<!DOCTYPE html>
@@ -105,64 +95,23 @@ const server = createServer((req, res) => {
 server.listen(3000);
 ```
 
-Key point: Create a fresh adapter and service per request—no shared state between requests.
+### What happens:
 
-### Client
+1. `createLinkedomAdapter()` returns an `adapter` (for creating elements) and `serialize` (for converting individual elements to HTML)
+2. `createService(adapter)` wires up your app with the server adapter
+3. `App(service).create(service)` runs your app, building a linkedom element tree
+4. `renderToString(root, serialize)` walks the tree and converts it to an HTML string
 
-```typescript
-// client.ts
-import { createDOMAdapter } from '@rimitive/view/adapters/dom';
-import {
-  createDOMHydrationAdapter,
-  createHydrationAdapter,
-} from '@rimitive/ssr/client';
-import { createService } from './service.js';
-import { App } from './App.js';
+Finally the HTML is sent to the client (and your `<script>` tag loads the client bundle).
 
-// Create hydration adapter that walks existing DOM
-const hydrationAdapter = createHydrationAdapter(
-  createDOMHydrationAdapter(document.querySelector('.app')!),
-  createDOMAdapter()
-);
-
-const service = createService(hydrationAdapter);
-
-// Hydrate - walks existing DOM, wires up reactivity
-App(service).create(service);
-
-// Switch to normal DOM mode for future updates
-hydrationAdapter.switchToFallback();
-```
-
-What happens:
-1. `createDOMHydrationAdapter` creates an adapter that walks existing DOM elements
-2. `createHydrationAdapter` wraps it with a fallback for post-hydration updates
-3. `.create(service)` hydrates the app, connecting signals to existing elements
-4. `.switchToFallback()` switches to normal DOM mode for subsequent updates
-
----
-
-## Browser-Only Code
-
-<Aside type="note">
-Unlike many frameworks, Rimitive effects are synchronous _by default_, and synchronous effects will run on the server.
-
-**However!** Client-specific or async flush strategies (like `mt`, `raf`, etc) are server safe but will be **noops** on the server. All of the flush strategies Rimitive provides out of the box (other than default) wouldn't run on the server, but if you're using a 3rd party or writing your own flush strategy, _you_ can decide whether it should or shouldn't.
+<Aside type="tip" title="Working Example">
+See [`packages/examples/ssr-router`](https://github.com/hejhi/rimitive/tree/main/packages/examples/ssr-router) for a complete basic SSR implementation with routing.
 </Aside>
-
-Default effects and refs run on the server. So, if you have browser-specific code that might break on the server (focus, scroll, animate, etc) or a provided server adapter, add guards:
-
-```typescript
-el('input').ref((el) => {
-  if (typeof window !== 'undefined') el.focus();
-})()
-```
 
 ---
 
 ## Next Steps
 
-This covers basic SSR with synchronous rendering. For async data loading:
-
+- **[Client Hydration](/guides/client-hydration)** — Make the server-rendered HTML interactive
 - **[SSR with Data Loading](/guides/ssr-loading)** — Fetch data during SSR with `load()`
 - **[Streaming SSR](/guides/streaming-ssr)** — Send HTML progressively as data loads
