docs: add Examples sidebar section and link examples from guides

--- a/packages/docs/src/content/docs/guides/adding-a-ui.mdx
+++ b/packages/docs/src/content/docs/guides/adding-a-ui.mdx
@@ -252,3 +252,7 @@ const App = () => el('div')(
 const app = mount(App());
 document.body.appendChild(app.element!);
 ```
+
+<Aside type="tip" title="Working Example">
+See [`packages/examples/view`](https://github.com/hejhi/rimitive/tree/main/packages/examples/view) for a complete example with behaviors, components, and reactive UI.
+</Aside>
