--- a/packages/docs/src/content/docs/patterns/behaviors.mdx
+++ b/packages/docs/src/content/docs/patterns/behaviors.mdx
@@ -640,3 +640,7 @@ const keyboard = (svc: SignalsSvc) => () => {
   return { pressed };
 };
 ```
+
+<Aside type="tip" title="Working Example">
+See [`packages/examples/headless`](https://github.com/hejhi/rimitive/tree/main/packages/examples/headless) for headless behavior implementations including dialog, select, and more.
+</Aside>
